--- a/brvendor/configs/minibase_defconfig
+++ b/brvendor/configs/minibase_defconfig
@@ -19,6 +19,9 @@ BR2_PACKAGE_MESA3D_OPENGL_ES=y
 BR2_PACKAGE_WESTON=y
 BR2_PACKAGE_WESTON_DRM=y
 BR2_PACKAGE_WESTON_DEMO_CLIENTS=y
+BR2_PACKAGE_LINUX_FIRMWARE=y
+BR2_PACKAGE_LINUX_FIRMWARE_IWLWIFI_6000G2B=y
+# BR2_PACKAGE_EUDEV_ENABLE_HWDB is not set
 BR2_PACKAGE_LIBDRM_VMWGFX=y
 BR2_PACKAGE_GNU_EFI=y
-BR2_TARGET_ROOTFS_EXT2=y
+# BR2_TARGET_ROOTFS_TAR is not set
