--- a/brvendor/configs/minibase_defconfig
+++ b/brvendor/configs/minibase_defconfig
@@ -20,7 +20,12 @@ BR2_PACKAGE_WESTON=y
 BR2_PACKAGE_WESTON_DRM=y
 BR2_PACKAGE_WESTON_DEMO_CLIENTS=y
 BR2_PACKAGE_LINUX_FIRMWARE=y
+BR2_PACKAGE_LINUX_FIRMWARE_IWLWIFI_6000G2A=y
 BR2_PACKAGE_LINUX_FIRMWARE_IWLWIFI_6000G2B=y
+BR2_PACKAGE_LINUX_FIRMWARE_IWLWIFI_7260=y
+BR2_PACKAGE_LINUX_FIRMWARE_IWLWIFI_7265D=y
+BR2_PACKAGE_LINUX_FIRMWARE_IWLWIFI_8000C=y
+BR2_PACKAGE_LINUX_FIRMWARE_IWLWIFI_8265=y
 # BR2_PACKAGE_EUDEV_ENABLE_HWDB is not set
 BR2_PACKAGE_LIBDRM_VMWGFX=y
 BR2_PACKAGE_GNU_EFI=y
