configure kernel for EFI boot

--- a/brvendor/board/minibase/linux.config
+++ b/brvendor/board/minibase/linux.config
@@ -16,6 +16,9 @@ CONFIG_SMP=y
 CONFIG_HYPERVISOR_GUEST=y
 CONFIG_PARAVIRT=y
 CONFIG_PREEMPT_VOLUNTARY=y
+CONFIG_EFI=y
+CONFIG_EFI_STUB=y
+CONFIG_EFI_MIXED=y
 CONFIG_CMDLINE_BOOL=y
 CONFIG_CMDLINE="quiet"
 CONFIG_NET=y
@@ -118,6 +121,7 @@ CONFIG_DRM_I915=m
 CONFIG_DRM_QXL=y
 CONFIG_DRM_BOCHS=y
 CONFIG_DRM_VIRTIO_GPU=y
+CONFIG_FB_EFI=y
 CONFIG_SOUND=y
 CONFIG_SND=m
 CONFIG_SND_HDA_INTEL=m
