--- a/sys-plain/Makefile
+++ b/sys-plain/Makefile
@@ -1,15 +1,19 @@
 all: whole.img
 
+../minibase/out:
+	@echo minibase has not been built
+	@false
+
 whole.img: rootfs.img bootfs.img whole.map
 	./whole.sh
 
 bootfs.img: initrd.img whole.map
 	./bootfs.sh
 
-rootfs.img: whole.map
+rootfs.img: whole.map | ../minibase/out
 	./rootfs.sh
 
-initrd.img:
+initrd.img: | ../minibase/out
 	./initrd.sh
 
 clean:
