use cmd instead of busybox sh for interactive shell

--- a/brvendor/configs/minibase_defconfig
+++ b/brvendor/configs/minibase_defconfig
@@ -5,11 +5,13 @@ BR2_TOOLCHAIN_BUILDROOT_CXX=y
 BR2_INIT_NONE=y
 BR2_ROOTFS_DEVICE_CREATION_DYNAMIC_EUDEV=y
 # BR2_TARGET_ENABLE_ROOT_LOGIN is not set
+BR2_SYSTEM_BIN_SH_NONE=y
 # BR2_TARGET_GENERIC_GETTY is not set
 # BR2_TARGET_GENERIC_REMOUNT_ROOTFS_RW is not set
 BR2_LINUX_KERNEL=y
 BR2_LINUX_KERNEL_USE_CUSTOM_CONFIG=y
 BR2_LINUX_KERNEL_CUSTOM_CONFIG_FILE="$(BR2_EXTERNAL_MINIBASE_PATH)/board/minibase/linux.config"
+# BR2_PACKAGE_BUSYBOX is not set
 BR2_PACKAGE_STRACE=y
 BR2_PACKAGE_INCONSOLATA=y
 BR2_PACKAGE_MESA3D=y
