--- a/brvendor/configs/minibase_defconfig
+++ b/brvendor/configs/minibase_defconfig
@@ -41,3 +41,4 @@ BR2_PACKAGE_DROPBEAR=y
 BR2_PACKAGE_DROPBEAR_DISABLE_REVERSEDNS=y
 # BR2_PACKAGE_IFUPDOWN_SCRIPTS is not set
 # BR2_TARGET_ROOTFS_TAR is not set
+BR2_PACKAGE_KILO=y
