--- a/brvendor/board/minibase/linux.config
+++ b/brvendor/board/minibase/linux.config
@@ -111,6 +111,7 @@ CONFIG_IWLMVM=m
 # CONFIG_WLAN_VENDOR_TI is not set
 # CONFIG_WLAN_VENDOR_ZYDAS is not set
 CONFIG_INPUT_EVDEV=y
+# CONFIG_LEGACY_PTYS is not set
 CONFIG_SERIAL_8250=y
 CONFIG_SERIAL_8250_CONSOLE=y
 CONFIG_VIRTIO_CONSOLE=y
