--- a/brvendor/configs/minibase_defconfig
+++ b/brvendor/configs/minibase_defconfig
@@ -5,7 +5,6 @@ BR2_TOOLCHAIN_BUILDROOT_CXX=y
 BR2_INIT_NONE=y
 BR2_ROOTFS_DEVICE_CREATION_DYNAMIC_EUDEV=y
 # BR2_TARGET_ENABLE_ROOT_LOGIN is not set
-BR2_SYSTEM_BIN_SH_NONE=y
 # BR2_TARGET_GENERIC_GETTY is not set
 # BR2_TARGET_GENERIC_REMOUNT_ROOTFS_RW is not set
 BR2_LINUX_KERNEL=y
@@ -14,6 +13,7 @@ BR2_LINUX_KERNEL_CUSTOM_CONFIG_FILE="$(BR2_EXTERNAL_MINIBASE_PATH)/board/minibas
 # BR2_PACKAGE_BUSYBOX is not set
 BR2_PACKAGE_STRACE=y
 BR2_PACKAGE_INCONSOLATA=y
+BR2_PACKAGE_LIBERATION=y
 BR2_PACKAGE_MESA3D=y
 BR2_PACKAGE_MESA3D_GALLIUM_DRIVER_SWRAST=y
 BR2_PACKAGE_MESA3D_GALLIUM_DRIVER_VIRGL=y
@@ -22,9 +22,9 @@ BR2_PACKAGE_MESA3D_DRI_DRIVER_I965=y
 BR2_PACKAGE_MESA3D_OPENGL_ES=y
 BR2_PACKAGE_WESTON=y
 BR2_PACKAGE_WESTON_DRM=y
-BR2_PACKAGE_WESTON_XWAYLAND=y
 BR2_PACKAGE_WESTON_DEMO_CLIENTS=y
 BR2_PACKAGE_XORG7=y
+BR2_PACKAGE_FLUXBOX=y
 BR2_PACKAGE_LINUX_FIRMWARE=y
 BR2_PACKAGE_LINUX_FIRMWARE_IWLWIFI_3160=y
 BR2_PACKAGE_LINUX_FIRMWARE_IWLWIFI_3168=y
@@ -34,11 +34,14 @@ BR2_PACKAGE_LINUX_FIRMWARE_IWLWIFI_7265=y
 BR2_PACKAGE_LINUX_FIRMWARE_IWLWIFI_8000C=y
 BR2_PACKAGE_LINUX_FIRMWARE_IWLWIFI_8265=y
 # BR2_PACKAGE_EUDEV_ENABLE_HWDB is not set
+BR2_PACKAGE_HARFBUZZ=y
 BR2_PACKAGE_LIBDRM_VMWGFX=y
-BR2_PACKAGE_LIBEPOXY=y
-BR2_PACKAGE_GNU_EFI=y
 BR2_PACKAGE_DROPBEAR=y
 BR2_PACKAGE_DROPBEAR_DISABLE_REVERSEDNS=y
 # BR2_PACKAGE_IFUPDOWN_SCRIPTS is not set
+BR2_PACKAGE_UTIL_LINUX_LIBMOUNT=y
 # BR2_TARGET_ROOTFS_TAR is not set
 BR2_PACKAGE_KILO=y
+BR2_PACKAGE_XORG_SERVER_WL=y
+BR2_PACKAGE_XF86_INPUT_EVDEV=y
+BR2_PACKAGE_XF86_VIDEO_INTEL=y
