fix (update) br defconfig

--- a/brvendor/configs/minibase_defconfig
+++ b/brvendor/configs/minibase_defconfig
@@ -24,7 +24,6 @@ BR2_PACKAGE_WESTON=y
 BR2_PACKAGE_WESTON_DRM=y
 BR2_PACKAGE_WESTON_DEMO_CLIENTS=y
 BR2_PACKAGE_XORG7=y
-BR2_PACKAGE_FLUXBOX=y
 BR2_PACKAGE_LINUX_FIRMWARE=y
 BR2_PACKAGE_LINUX_FIRMWARE_IWLWIFI_3160=y
 BR2_PACKAGE_LINUX_FIRMWARE_IWLWIFI_3168=y
@@ -34,8 +33,8 @@ BR2_PACKAGE_LINUX_FIRMWARE_IWLWIFI_7265=y
 BR2_PACKAGE_LINUX_FIRMWARE_IWLWIFI_8000C=y
 BR2_PACKAGE_LINUX_FIRMWARE_IWLWIFI_8265=y
 # BR2_PACKAGE_EUDEV_ENABLE_HWDB is not set
-BR2_PACKAGE_HARFBUZZ=y
 BR2_PACKAGE_LIBDRM_VMWGFX=y
+BR2_PACKAGE_LIBEV=y
 BR2_PACKAGE_DROPBEAR=y
 BR2_PACKAGE_DROPBEAR_DISABLE_REVERSEDNS=y
 # BR2_PACKAGE_IFUPDOWN_SCRIPTS is not set
@@ -45,3 +44,5 @@ BR2_PACKAGE_KILO=y
 BR2_PACKAGE_XORG_SERVER_WL=y
 BR2_PACKAGE_XF86_INPUT_EVDEV=y
 BR2_PACKAGE_XF86_VIDEO_INTEL=y
+BR2_PACKAGE_FLUXBOX_PATCHED=y
+BR2_PACKAGE_RXVT_UNICODE=y
