some handy X tools

--- a/brvendor/configs/minibase_defconfig
+++ b/brvendor/configs/minibase_defconfig
@@ -24,6 +24,11 @@ BR2_PACKAGE_WESTON=y
 BR2_PACKAGE_WESTON_DRM=y
 BR2_PACKAGE_WESTON_DEMO_CLIENTS=y
 BR2_PACKAGE_XORG7=y
+BR2_PACKAGE_XAPP_XBACKLIGHT=y
+BR2_PACKAGE_XAPP_XDPYINFO=y
+BR2_PACKAGE_XAPP_XDRIINFO=y
+BR2_PACKAGE_XAPP_XINPUT=y
+BR2_PACKAGE_XAPP_XRDB=y
 BR2_PACKAGE_LINUX_FIRMWARE=y
 BR2_PACKAGE_LINUX_FIRMWARE_IWLWIFI_3160=y
 BR2_PACKAGE_LINUX_FIRMWARE_IWLWIFI_3168=y
