--- a/sys-1-plain/rootfs-dropin/etc/X11/xorg.conf
+++ b/sys-1-plain/rootfs-dropin/etc/X11/xorg.conf
@@ -4,11 +4,27 @@ Section "Module"
 	Load "shadowfb"
 	Load "shadow"
 	Load "vgahw"
+	Load "int10"
 	Load "vbe"
 EndSection
 
 Section "InputClass"
-        Identifier "evdev"
+        Identifier "evdev keyboard catchall"
+	MatchIsKeyboard "on"
         MatchDevicePath "/dev/input/event*"
         Driver "evdev"
+EndSection
+
+Section "InputClass"
+	Identifier "evdev pointer catchall"
+	MatchIsPointer "on"
+	MatchDevicePath "/dev/input/event*"
+	Driver "evdev"
+EndSection
+
+Section "InputClass"
+	Identifier "synaptics catchall"
+	MatchIsTouchpad "on"
+	MatchDevicePath "/dev/input/event*"
+	Driver "synaptics"
 EndSection
