add xf86-input-synaptics to defconfig
Should have been a part of 1d519540d97d65ba534204add7b3b309ecb75fc6.

--- a/brvendor/configs/minibase_defconfig
+++ b/brvendor/configs/minibase_defconfig
@@ -48,6 +48,7 @@ BR2_PACKAGE_UTIL_LINUX_LIBMOUNT=y
 BR2_PACKAGE_KILO=y
 BR2_PACKAGE_XORG_SERVER_WL=y
 BR2_PACKAGE_XF86_INPUT_EVDEV=y
+BR2_PACKAGE_XF86_INPUT_SYNAPTICS=y
 BR2_PACKAGE_XF86_VIDEO_INTEL=y
 BR2_PACKAGE_FLUXBOX_PATCHED=y
 BR2_PACKAGE_RXVT_UNICODE=y
