--- a/brvendor/board/minibase/linux.config
+++ b/brvendor/board/minibase/linux.config
@@ -118,11 +118,17 @@ CONFIG_VIRTIO_CONSOLE=y
 CONFIG_HW_RANDOM_VIRTIO=m
 # CONFIG_PTP_1588_CLOCK is not set
 CONFIG_DRM=y
+# CONFIG_DRM_I2C_CH7006 is not set
+# CONFIG_DRM_I2C_SIL164 is not set
+CONFIG_DRM_AMDGPU=m
+CONFIG_DRM_NOUVEAU=m
+CONFIG_NOUVEAU_DEBUG_DEFAULT=1
 CONFIG_DRM_I915=m
-CONFIG_DRM_QXL=y
-CONFIG_DRM_BOCHS=y
-CONFIG_DRM_VIRTIO_GPU=y
+CONFIG_DRM_VGEM=m
+CONFIG_DRM_BOCHS=m
+CONFIG_DRM_VIRTIO_GPU=m
 CONFIG_FB_EFI=y
+CONFIG_BACKLIGHT_GENERIC=m
 CONFIG_SOUND=y
 CONFIG_SND=m
 CONFIG_SND_HDA_INTEL=m
